# mssql_mcp_server

./: pyproject.toml
